Modify WURCSGraphNormalizer